cabal-version:      3.0
name:               crypto-ref
version:            0.1.0.0
synopsis:           Reference implementations of various cryptography algorithms
-- description:
license:            MIT
license-file:       LICENSE
author:             Dan Pittman
maintainer:         dan@dpitt.me
-- copyright:
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        AES
        AES.Encrypt
        AES.Decrypt
        GF
        Util
        XTS
    other-modules:
        AES.Shared
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
    hs-source-dirs:   src
    default-language: Haskell2010


test-suite xts
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests/xts
  main-is:             Spec.hs
  build-depends:       base ^>=4.17.2.1,
                       crypto-ref,
                       hspec >=2.7,
  default-language:    Haskell2010
